tests/tooling/fixtures/native/execution/positive/class_protocol_qualifier_alias_signature.objc3
module ClassProtocolQualifierAliasSignature;

fn choose(flag: bool, when_true: Class<NSObject>, when_false: Class<NSObject>) -> Class {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 40, 2) + 1;
}
