tests/tooling/fixtures/native/execution/negative/overchained_pure_extern_pure_qualifiers.objc3
module OverchainedPureExternPureQualifiers;

pure extern pure fn add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return add(1, 2);
}
